--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,9 @@ setw -g aggressive-resize on
 unbind l
 bind C-a last-window
 
+# UTF-8
+set -g utf8 on
+
 # 256 color
 set -g default-terminal "xterm-256color"
 
