add tmux dir for pane macros

--- a/tmux.conf
+++ b/tmux.conf
@@ -60,3 +60,10 @@ unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+
+
+# tmux pane macros
+# look in .tmux/macros/*
+
+# dev 
+bind D source-file ~/.tmux/macros/dev
