--- a/tmux.conf
+++ b/tmux.conf
@@ -12,11 +12,8 @@ setw -g aggressive-resize on
 unbind l
 bind C-a last-window
 
-# UTF-8
-set -g utf8 on
-
 # 256 color
-set -g default-terminal "xterm-256color"
+#set -g default-terminal "xterm-256color"
 
 # status line
 set -g status-interval 1
@@ -31,9 +28,9 @@ setw -g window-status-current-fg white
 setw -g window-status-current-bg red 
 setw -g window-status-current-format " [#I#F] #W "
 setw -g window-status-format "[#I#F#W]"
-setw -g window-status-activity-fg black
-setw -g window-status-activity-bg white
-setw -g window-status-activity-attr default
+#setw -g window-status-activity-fg black
+#setw -g window-status-activity-bg white
+#setw -g window-status-activity-attr default
 
 # split
 bind | split-window -h
@@ -54,16 +51,17 @@ bind - resize-pane -D 1
 bind + resize-pane -U 1
 
 
+# Copy and paste like vim
 unbind [
 bind Escape copy-mode
-unbind p
-bind p paste-buffer
+unbind pi   
+bind p paste-buffer   # 'C-a p' to paste
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+# 'q' to exit
 
 
 # tmux pane macros
-# look in .tmux/macros/*
-
+# look in .tmux/macros/
 # dev 
-bind D source-file ~/.tmux/macros/dev
+bind B source-file ~/.tmux/macros/dev.conf
