--- a/tmux/macros/dev.conf
+++ b/tmux/macros/dev.conf
@@ -1,7 +1,7 @@
 # tmux development environment
 
 selectp -t 0      # select pane 0
-splitw -h -p 50   # hsplit 50/50
+splitw -v -p 50   # hsplit 50/50
 selectp -t 1      # select new pane 1
-splitw -v -p 50   # vsplit 50/50
+splitw -h -p 50   # vsplit 50/50
 selectp -t 0      # select pane 0
