--- a/tmux.conf
+++ b/tmux.conf
@@ -54,7 +54,7 @@ bind + resize-pane -U 1
 # Copy and paste like vim
 unbind [
 bind Escape copy-mode
-unbind pi   
+unbind p
 bind p paste-buffer   # 'C-a p' to paste
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
