addw scripts to statusline

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
-# Change prefix key to Ctrl+a
-unbind C-b
+#Setup prefix key to Ctrl+a
 set -g prefix C-a
+unbind C-b
+
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 setw -g mode-keys vi
 bind-key a send-prefix
 
@@ -8,12 +10,18 @@ set -g base-index 1
 set -s escape-time 0
 setw -g aggressive-resize on
 
+#Window binding
+bind-key -n C-h select-pane -L
+bind-key -n C-j select-pane -D
+bind-key -n C-k select-pane -U
+bind-key -n C-l select-pane -R
+
 # Last active window
 unbind l
 bind C-a last-window
 
 # 256 color
-#set -g default-terminal "xterm-256color"
+set-option -g default-terminal "screen-256color"
 
 # status line
 set -g status-interval 1
@@ -21,7 +29,9 @@ set -g status-bg blue
 set -g status-fg black
 set -g status-attr bright
 set -g status-left " "
-set -g status-right "#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d  #[fg=cyan,bright][ %I:%M:%S%P ] #[default]#[fg=magenta,bright]#[default]  "
+#set -g status-right "#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]#[fg=magenta,bright]#[default]  "
+set -g status-right '#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #(ruby tools/gdgmembers.rb) #[default]'
+
 #set -g status-right "#[fg=white,bg=black] [#S]#[fg=red,bright] [ #[fg=cyan]#H #[fg=red,bright]] #[fg=yellow,bright]%Y.%m.%d #[default]  "
 set -g status-right-length 100
 setw -g window-status-current-fg white
