modify tmux and add bash_profile

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,7 @@ set -g status-fg black
 set -g status-attr bright
 set -g status-left " "
 #set -g status-right "#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]#[fg=magenta,bright]#[default]  "
-set -g status-right '#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #(ruby tools/gdgmembers.rb) #[default]'
+set -g status-right '#[fg=white,bg=blue] GDG:#(ruby tools/nogit-gdgmembers.rb) | #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]'
 
 #set -g status-right "#[fg=white,bg=black] [#S]#[fg=red,bright] [ #[fg=cyan]#H #[fg=red,bright]] #[fg=yellow,bright]%Y.%m.%d #[default]  "
 set -g status-right-length 100
