Create gemrc update gvimrc and tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,7 @@ unbind l
 bind C-a last-window
 
 # 256 color
-set-option -g default-terminal "screen-256color"
+# set-option -g default-terminal "screen-256color"
 
 # status line
 set -g status-interval 1
@@ -30,8 +30,9 @@ set -g status-fg black
 set -g status-attr bright
 set -g status-left " "
 #set -g status-right "#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]#[fg=magenta,bright]#[default]  "
-set -g status-right '#[fg=white,bg=blue] GDG:#(ruby tools/nogit-gdgmembers.rb) | #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]'
+#set -g status-right '#[fg=white,bg=blue] GDG:#(ruby tools/nogit-gdgmembers.rb) | #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]'
 
+set -g status-right '#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]'
 #set -g status-right "#[fg=white,bg=black] [#S]#[fg=red,bright] [ #[fg=cyan]#H #[fg=red,bright]] #[fg=yellow,bright]%Y.%m.%d #[default]  "
 set -g status-right-length 100
 setw -g window-status-current-fg white
@@ -69,9 +70,3 @@ bind p paste-buffer   # 'C-a p' to paste
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 # 'q' to exit
-
-
-# tmux pane macros
-# look in .tmux/macros/
-# dev 
-bind B source-file ~/.tmux/macros/dev.conf
