--- a/tmux.conf
+++ b/tmux.conf
@@ -67,6 +67,6 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer   # 'C-a p' to paste
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 # 'q' to exit
