--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,8 @@
 set -g prefix C-a
 unbind C-b
 
+set-option -g default-shell /usr/local/bin/zsh
+
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 setw -g mode-keys vi
 bind-key a send-prefix
@@ -27,7 +29,7 @@ bind C-a last-window
 set -g status-interval 1
 set -g status-bg blue
 set -g status-fg black
-set -g status-attr bright
+set -g mode-style bright
 set -g status-left " "
 #set -g status-right "#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]#[fg=magenta,bright]#[default]  "
 #set -g status-right '#[fg=white,bg=blue] GDG:#(ruby tools/nogit-gdgmembers.rb) | #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]'
@@ -35,8 +37,8 @@ set -g status-left " "
 set -g status-right '#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]'
 #set -g status-right "#[fg=white,bg=black] [#S]#[fg=red,bright] [ #[fg=cyan]#H #[fg=red,bright]] #[fg=yellow,bright]%Y.%m.%d #[default]  "
 set -g status-right-length 100
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red 
+setw -g window-status-current-style fg=white
+setw -g window-status-current-style bg=red 
 setw -g window-status-current-format " [#I#F] #W "
 setw -g window-status-format "[#I#F#W]"
 #setw -g window-status-activity-fg black
