--- a/tmux.conf
+++ b/tmux.conf
@@ -34,7 +34,7 @@ set -g status-left " "
 #set -g status-right "#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]#[fg=magenta,bright]#[default]  "
 #set -g status-right '#[fg=white,bg=blue] GDG:#(ruby tools/nogit-gdgmembers.rb) | #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]'
 
-set -g status-right '#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]'
+set -g status-right "#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P %Z #[fg=red,bright]::#[fg=cyan,bright] #(TZ=UTC date -u '+%%I:%%M:%%S%%P %%Z' ) ] #[default]"
 #set -g status-right "#[fg=white,bg=black] [#S]#[fg=red,bright] [ #[fg=cyan]#H #[fg=red,bright]] #[fg=yellow,bright]%Y.%m.%d #[default]  "
 set -g status-right-length 100
 setw -g window-status-current-style fg=white
