--- a/tmux.conf
+++ b/tmux.conf
@@ -5,12 +5,15 @@ unbind C-b
 set-option -g default-shell /usr/local/bin/zsh
 
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
-setw -g mode-keys vi
+
+
 bind-key a send-prefix
+bind-key s setw synchronize-panes
 
 set -g base-index 1
 set -s escape-time 0
 setw -g aggressive-resize on
+set -g mouse on
 
 #Window binding
 bind-key -n C-h select-pane -L
@@ -34,7 +37,8 @@ set -g status-left " "
 #set -g status-right "#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]#[fg=magenta,bright]#[default]  "
 #set -g status-right '#[fg=white,bg=blue] GDG:#(ruby tools/nogit-gdgmembers.rb) | #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]'
 
-set -g status-right "#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P %Z #[fg=red,bright]::#[fg=cyan,bright] #(TZ=UTC date -u '+%%I:%%M:%%S%%P %%Z' ) ] #[default]"
+#set -g status-right "#[fg=yellow,bright] WAN #(dig +short myip.opendns.com @resolver1.opendns.com)    #[fg=white,bright] %a %h, %d #[fg=cyan,bright][ %I:%M:%S%P %Z #[fg=red,bright]::#[fg=cyan,bright] #(TZ=UTC date -u '+%%I:%%M:%%S%%P %%Z' ) ] #[default]"
+set -g status-right "#[fg=yellow,bright] #[fg=white,bright] %a %h, %d #[fg=cyan,bright][ %I:%M:%S%P %Z #[fg=red,bright]::#[fg=cyan,bright] #(TZ=UTC date -u '+%%I:%%M:%%S%%P %%Z' ) ] #[default]"
 #set -g status-right "#[fg=white,bg=black] [#S]#[fg=red,bright] [ #[fg=cyan]#H #[fg=red,bright]] #[fg=yellow,bright]%Y.%m.%d #[default]  "
 set -g status-right-length 100
 setw -g window-status-current-style fg=white
