--- a/tmux.conf
+++ b/tmux.conf
@@ -1,21 +1,20 @@
-#Setup prefix key to Ctrl+a
+#
+# 
+# Updated: Thu Mar 5 2020
+#
+# Setup prefix key to Ctrl+a
 set -g prefix C-a
 unbind C-b
+bind-key a send-prefix
 
 set-option -g default-shell /usr/local/bin/zsh
 
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
-
-
-bind-key a send-prefix
-bind-key s setw synchronize-panes
-
 set -g base-index 1
 set -s escape-time 0
-setw -g aggressive-resize on
 set -g mouse on
+setw -g aggressive-resize on
 
-#Window binding
+# Window binding
 bind-key -n C-h select-pane -L
 bind-key -n C-j select-pane -D
 bind-key -n C-k select-pane -U
@@ -25,29 +24,30 @@ bind-key -n C-l select-pane -R
 unbind l
 bind C-a last-window
 
-# 256 color
-# set-option -g default-terminal "screen-256color"
-
 # status line
 set -g status-interval 1
 set -g status-bg blue
 set -g status-fg black
 set -g mode-style bright
-set -g status-left " "
-#set -g status-right "#[fg=white,bg=blue] #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]#[fg=magenta,bright]#[default]  "
+
 #set -g status-right '#[fg=white,bg=blue] GDG:#(ruby tools/nogit-gdgmembers.rb) | #[fg=white,bright]%a %h, %d #[fg=cyan,bright][ %I:%M:%S%P ] #[default]'
 
-#set -g status-right "#[fg=yellow,bright] WAN #(dig +short myip.opendns.com @resolver1.opendns.com)    #[fg=white,bright] %a %h, %d #[fg=cyan,bright][ %I:%M:%S%P %Z #[fg=red,bright]::#[fg=cyan,bright] #(TZ=UTC date -u '+%%I:%%M:%%S%%P %%Z' ) ] #[default]"
-set -g status-right "#[fg=yellow,bright] #[fg=white,bright] %a %h, %d #[fg=cyan,bright][ %I:%M:%S%P %Z #[fg=red,bright]::#[fg=cyan,bright] #(TZ=UTC date -u '+%%I:%%M:%%S%%P %%Z' ) ] #[default]"
-#set -g status-right "#[fg=white,bg=black] [#S]#[fg=red,bright] [ #[fg=cyan]#H #[fg=red,bright]] #[fg=yellow,bright]%Y.%m.%d #[default]  "
-set -g status-right-length 100
+set -g status-left "#{?client_prefix,🔍,}"
+set -g status-right "#[fg=yellow,bright] WAN #(dig +short myip.opendns.com @resolver1.opendns.com)    #[fg=white,bright] %a %h, %d #[fg=cyan,bright][ %I:%M:%S%P %Z #[fg=red,bright]::#[fg=cyan,bright] #(TZ=UTC date -u '+%%I:%%M:%%S%%P %%Z' ) ] #[default]"
+set -g status-right-length 90 
 setw -g window-status-current-style fg=white
 setw -g window-status-current-style bg=red 
 setw -g window-status-current-format " [#I#F] #W "
 setw -g window-status-format "[#I#F#W]"
-#setw -g window-status-activity-fg black
-#setw -g window-status-activity-bg white
-#setw -g window-status-activity-attr default
+
+
+
+### Custom key bindings
+
+
+# Shortcuts
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key s setw synchronize-panes
 
 # split
 bind | split-window -h
